[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "huedominance"
authors = [{name = "Oleg Mirzov", email = "oleg.mirzov@nateko.lu.se"}]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["plant phenology", "phenocam", "vegetation"]
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
requires-python = ">=3.5"
dynamic = ["version", "description"]
dependencies = [
	"Pillow",
	"numpy"
]

[project.urls]
Source = "https://github.com/ICOS-Carbon-Portal/data/tree/master/src/main/python/huedominance"

[projects.scripts]
huedominance = "__main__:main"

