[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "icoscp_core"
authors = [{name = "Oleg Mirzov", email = "oleg.mirzov@nateko.lu.se"}]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["environment", "data access", "envri"]
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
requires-python = ">=3.10"
dynamic = ["version", "description"]
dependencies = [
	"dacite"
]

[project.urls]
Source = "https://github.com/ICOS-Carbon-Portal/data/tree/master/src/main/python/icoscp_core"
