[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "icoscp_core"
authors = [{name = "Oleg Mirzov", email = "oleg.mirzov@nateko.lu.se"}]
maintainers = [
	{name = "Klara Broman", email = "klara.broman@nateko.lu.se"},
	{name = "Jonathan Schenk", email = "jonathan.schenk@nateko.lu.se"},
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["environment", "research", "infrastructure", "data access"]
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
requires-python = ">=3.10"
dynamic = ["version", "description"]
dependencies = [
	"dacite==1.8.1",
	"numpy>=1.23"
]
[tool.flit.sdist]
include = ["src/icoscp_core/metacore.py"]
exclude = ["src/icoscp_core/examples.py"]

[project.urls]
Source = "https://github.com/ICOS-Carbon-Portal/data/tree/master/src/main/python/icoscp_core"
